@@ -663,6 +663,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-6564. Use slf4j instead of common-logging in hdfs-client.
     (Rakesh R via wheat9)
 
+    HDFS-8639. Add Option for NameNode HTTP port in MiniDFSClusterManager.
+    (Kai Sasaki via jing9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
